--- a/demo/styles.css
+++ b/demo/styles.css
@@ -32,7 +32,7 @@ select {
 }
 
 button {
-    background-color: #d82e3a;
+    background-color: #A5C544;
     border: none;
     color: white;
     padding: 10px 25px;
