--- a/docs/src/.vuepress/styles/palette.styl
+++ b/docs/src/.vuepress/styles/palette.styl
@@ -4,7 +4,7 @@
  * ref：https://v1.vuepress.vuejs.org/zh/config/#palette-styl
  */
 
-$accentColor = #d82e3a
+$accentColor = #a5c544
 $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
